--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,14 +62,16 @@
             </intent-filter>
         </service>
 
+        <activity android:name=".MapaActivity"></activity>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
+            android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDqXYfR2-veIZhYiHwguk1sZ7dG5FBXCEw" />
 
-        <activity android:name=".MapaActivity"></activity>
+
     </application>
 
 </manifest>
