--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,11 +38,8 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".SplashActivity">
-
-        </activity>
+        <activity android:name=".SplashActivity"></activity>
         <activity
             android:name=".PrincipalActivity"
             android:label="@string/title_activity_principal"
@@ -68,9 +65,11 @@
         <activity
             android:name=".NotificacionActivity"
             android:label="@string/title_activity_notificacion"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".GaleriaFotosActivity"
+            android:label="@string/title_activity_galeria_fotos"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
