ultimas actualizaciones para la presentacion final de Moviles

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,13 +33,15 @@
         </provider>
 
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SplashActivity"></activity>
         <activity
             android:name=".PrincipalActivity"
             android:label="@string/title_activity_principal"
